# aoc

./: Cargo.toml  README.md
aoc_2015/: day1.rs
aoc_2015/day01/: Cargo.toml
aoc_2015/day01/src/: main.rs
aoc_2015/day02/: Cargo.toml
aoc_2015/day02/src/: main.rs
aoc_2015/day03/: Cargo.toml
aoc_2015/day03/src/: main.rs
aoc_2015/day04/: Cargo.toml
aoc_2015/day04/src/: main.rs
aoc_2015/day05/: Cargo.toml
aoc_2015/day05/src/: main.rs
aoc_2015/day06/: Cargo.toml
aoc_2015/day06/src/: main.rs
aoc_2015/day07/: Cargo.toml
aoc_2015/day07/src/: main.rs
aoc_2015/day08/src/: main.rs
aoc_2015/day09/: Cargo.toml
aoc_2015/day09/src/: main.rs
aoc_2015/day10/: Cargo.toml
aoc_2015/day10/src/: main.rs
aoc_2015/day11/: Cargo.toml
aoc_2024/day01/src/: main.rs
src/: main.rs
src/aoc_2015/: mod.rs
src/aoc_2015/day01/: mod.rs  test.txt
src/aoc_2015/day02/: mod.rs
src/aoc_2015/day03/: mod.rs
src/aoc_2015/day04/: mod.rs
src/aoc_2015/day05/: mod.rs
src/aoc_2015/day06/: mod.rs
src/aoc_2015/day07/: mod.rs
src/aoc_2015/day08/: mod.rs
src/aoc_2015/day09/: mod.rs
src/aoc_2015/day10/: mod.rs
src/aoc_2015/day11/: mod.rs
src/aoc_2024/: mod.rs
src/aoc_2024/day01/: mod.rs
